--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -45,6 +45,7 @@ spec:
           failureThreshold: 1
           initialDelaySeconds: 10
           periodSeconds: 10
+# Unsure what is needed below for a remotely managed tunnel.          
         volumeMounts:
             - name: config
               mountPath: /etc/cloudflared/config
