--- a/charts/cloudflare-tunnel-remote/templates/secret.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/secret.yaml
@@ -1,5 +1,3 @@
-#This is likely unneeded for remotely managed tunnels
-{{- if and (and .Values.cloudflare.account .Values.cloudflare.tunnelId .Values.cloudflare.secret) (not .Values.cloudflare.secretName) }}
 # This credentials secret allows cloudflared to authenticate itself
 # to the Cloudflare infrastructure.
 apiVersion: v1
@@ -9,10 +7,4 @@ metadata:
   labels:
     {{- include "cloudflare-tunnel-remote.labels" . | nindent 4 }}
 stringData:
-  credentials.json: |-
-    {
-      "AccountTag": {{ .Values.cloudflare.account | quote }},
-      "TunnelID": {{ .Values.cloudflare.tunnelId | quote }},
-      "TunnelSecret": {{ .Values.cloudflare.secret | quote }}
-    }
-{{- end }}
+  TUNNEL_TOKEN: {{ .Values.cloudflare.tunnel_token }}
