--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -30,9 +30,12 @@ spec:
         - --metrics
         - 0.0.0.0:2000
         - run
-        args:
-        - --token
-        - {{ .Values.cloudflare.tunnel_token }}
+        envFrom:
+        - name: TUNNEL_TOKEN
+          valueFrom:
+            secretKeyRef:
+              name: {{ include "cloudflare-tunnel-remote.fullname" . }}
+              key: TUNNEL_TOKEN
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         name: cloudflared
@@ -45,52 +48,3 @@ spec:
           failureThreshold: 1
           initialDelaySeconds: 10
           periodSeconds: 10
-# Unsure what is needed below for a remotely managed tunnel.          
-        volumeMounts:
-            - name: config
-              mountPath: /etc/cloudflared/config
-              readOnly: true
-            # Each tunnel has an associated "credentials file" which authorizes machines
-            # to run the tunnel. cloudflared will read this file from its local filesystem,
-            # and it'll be stored in a k8s secret.
-            - name: creds
-              mountPath: /etc/cloudflared/creds
-              readOnly: true
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-      volumes:
-        - name: creds
-          secret:
-            secretName: {{ .Values.cloudflare.secretName | default (include "cloudflare-tunnel-remote.fullname" .) }}
-        - name: config
-          configMap:
-            name: {{ include "cloudflare-tunnel-remote.fullname" . }}
-            items:
-              - key: config.yaml
-                path: config.yaml
-      {{- with .Values.nodeSelector }}
-      nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      affinity:
-        {{- with .Values.affinity }}
-        {{- toYaml . | nindent 8 }}
-        {{- else }}
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - weight: 10
-              podAffinityTerm:
-                topologyKey: kubernetes.io/hostname
-                labelSelector:
-                  matchExpressions:
-                  {{- range $k, $v := include "cloudflare-tunnel-remote.selectorLabels" . | fromYaml }}
-                    - key: {{ $k }}
-                      operator: In
-                      values:
-                        - {{ $v }}
-                  {{- end }}
-      {{- end }}
-      {{- with .Values.tolerations }}
-      tolerations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
