--- a/charts/cloudflare-tunnel-remote/templates/deployment.yaml
+++ b/charts/cloudflare-tunnel-remote/templates/deployment.yaml
@@ -14,30 +14,29 @@ spec:
       creationTimestamp: null
       annotations:
         # These are here so the deployment rolls when the config or secret change.
+        checksum/secret: {{ .Values.cloudflare.tunnel_token | sha256sum }}
         {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
       labels:
-        {{- include "cloudflare-tunnel-remote.selectorLabels" . | nindent 8 }}
+        pod: cloudflared
     spec:
       containers:
-        - command:
+      - image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default "latest" }}"
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        name: cloudflared
+        command:
           - cloudflared
           - tunnel
           # In a k8s environment, the metrics server needs to listen outside the pod it runs on. 
           # The address 0.0.0.0:2000 allows any pod in the namespace.
-        - --metrics
-        - 0.0.0.0:2000
-        - run
+          - --metrics
+          - 0.0.0.0:2000
+          - run
         envFrom:
-        - name: TUNNEL_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: {{ include "cloudflare-tunnel-remote.fullname" . }}
-              key: TUNNEL_TOKEN
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        name: cloudflared
+        - secretRef:
+            name: {{ include "cloudflare-tunnel-remote.fullname" . }}
+            key: TUNNEL_TOKEN
         livenessProbe:
           httpGet:
             # Cloudflared has a /ready endpoint which returns 200 if and only if
